fix: Friends, GET: added Username